Merge changes for 2022 (#72)
* Bump to gradle 6.8.1, wpilib et

* 2022 version changes

* Fix no matching pattern info message always being printed

* Work on moving ET's dependency management out of the model, and into native utils

* Move all embedded tools native library management up to native-utils, and move it out of gradle model

* Fixup support for handling vendor libraries through new configuration setup

* Proper defferment

* Clean up some warnings

* Major dependency update

Rewriting the entire thing to remove some of the generic parts, in addition to actually making it more extendable as well

* I can link runtimes!

* First combined one works

* Fix visa

* Finish up custom link types

* Some work on exports

* Don't add pdb files to install tasks

* Fix static names

* Switch artifact transform to not use internal type

Want to reduce internal dependencies, and only keep the ones that are required or should never change

* Fix git link to use @BinaryTasks

* Use correct model tasks for pdbs

* Cleanup pdb stuff

* A bit more cleanup

* Move things into better locations

* Clean up rules for exports configs

* Clean up orderedStripTask

* Fix name for source files

* Add pdbs to runtime, remove runtime excludes

For install, we want all files. For deploy, we can exclude specific ones in certain cases

* Make matchers public (vendors in gradlerio will use them

* Some notes on transformations, fix native directory name

* Exclude jni and java artifacts from standard maven dependencies

* Update to gradle 7

* Update to gradle 7.1.1

* Fix 7.1.1 build

* Merge main changes into 2022 (#69)

* Skip sourcelink when cloned with SSH (#70)

* Update publish plugin version